Fix OPT strategies, Start with MI