@@ -1,26 +1,27 @@
 package run;
 
-import static run.CompanyToIT_GEN_Run.SRC_MODEL_NAME;
-import static run.CompanyToIT_GEN_Run.TRG_MODEL_NAME;
+import static run.JavaToDoc_GEN_Run.SRC_MODEL_NAME;
+import static run.JavaToDoc_GEN_Run.TRG_MODEL_NAME;
 
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 
 import org.apache.log4j.Level;
 import org.apache.log4j.Logger;
 import org.emoflon.neo.api.API_Common;
-import org.emoflon.neo.api.API_CompanyToIT;
-import org.emoflon.neo.api.CompanyToIT.API_CompanyToIT_FWD_OPT;
-import org.emoflon.neo.api.CompanyToIT.API_CompanyToIT_GEN;
-import org.emoflon.neo.api.metamodels.API_Company;
-import org.emoflon.neo.api.metamodels.API_IT;
+import org.emoflon.neo.api.API_JavaToDoc;
+import org.emoflon.neo.api.JavaToDoc.API_JavaToDoc_CC;
+import org.emoflon.neo.api.JavaToDoc.API_JavaToDoc_GEN;
+import org.emoflon.neo.api.metamodels.API_SimpleJava;
+import org.emoflon.neo.api.metamodels.API_SimpleDoc;
 import org.emoflon.neo.cypher.models.NeoCoreBuilder;
 import org.emoflon.neo.engine.api.constraints.IConstraint;
 import org.emoflon.neo.engine.modules.NeoGenerator;
 import org.emoflon.neo.engine.modules.ilp.ILPFactory.SupportedILPSolver;
-import org.emoflon.neo.engine.modules.matchreprocessors.FWD_OPTReprocessor;
+import org.emoflon.neo.engine.modules.matchreprocessors.CCReprocessor;
 import org.emoflon.neo.engine.modules.monitors.HeartBeatAndReportMonitor;
-import org.emoflon.neo.engine.modules.ruleschedulers.FWD_OPTRuleScheduler;
+import org.emoflon.neo.engine.modules.ruleschedulers.CCRuleScheduler;
 import org.emoflon.neo.engine.modules.startup.NoOpStartup;
 import org.emoflon.neo.engine.modules.terminationcondition.NoMoreMatchesTerminationCondition;
 import org.emoflon.neo.engine.modules.updatepolicies.CorrCreationOperationalStrategy;
@@ -28,17 +29,17 @@ import org.emoflon.neo.engine.modules.valueGenerators.LoremIpsumStringValueGener
 import org.emoflon.neo.engine.modules.valueGenerators.ModelNameValueGenerator;
 import org.emoflon.neo.engine.modules.analysis.*;
 
-public class CompanyToIT_FWD_OPT_Run {
-	private static final Logger logger = Logger.getLogger(CompanyToIT_FWD_OPT_Run.class);
+public class JavaToDoc_CC_Run {
+	private static final Logger logger = Logger.getLogger(JavaToDoc_CC_Run.class);
 	private static final SupportedILPSolver solver = SupportedILPSolver.Gurobi;
 
 	private String srcModel = SRC_MODEL_NAME;
 	private String trgModel = TRG_MODEL_NAME;
-	private CorrCreationOperationalStrategy forwardTransformation;
+	private CorrCreationOperationalStrategy corrCreation;
 
 	public static void main(String[] pArgs) throws Exception {
 		Logger.getRootLogger().setLevel(Level.INFO);
-		var app = new CompanyToIT_FWD_OPT_Run();
+		var app = new JavaToDoc_CC_Run();
 		app.run();
 	}
 
@@ -47,55 +48,49 @@ public class CompanyToIT_FWD_OPT_Run {
 
 			var generator = createGenerator(builder);
 
-			logger.info("Start forward transformation...");
+			logger.info("Start corr creation...");
 			generator.generate();
 		}
 	}
 
 	public NeoGenerator createGenerator(NeoCoreBuilder builder) {
-		var genAPI = new API_CompanyToIT_GEN(builder);
-		var fwd_optAPI = new API_CompanyToIT_FWD_OPT(builder);
-		var genRules = genAPI.getAllRulesForCompanyToIT_GEN();
-		var tripleRules = new API_CompanyToIT(builder).getTripleRulesOfCompanyToIT();
+		var genAPI = new API_JavaToDoc_GEN(builder);
+		var ccAPI = new API_JavaToDoc_CC(builder);
+		var genRules = genAPI.getAllRulesForJavaToDoc_GEN();
+		var tripleRules = new API_JavaToDoc(builder).getTripleRulesOfJavaToDoc();
 		var analyser = new TripleRuleAnalyser(tripleRules);
 		
-		forwardTransformation = new CorrCreationOperationalStrategy(//
+		corrCreation = new CorrCreationOperationalStrategy(//
 				solver, //
 				builder, //
 				genRules, //
-				fwd_optAPI.getAllRulesForCompanyToIT_FWD_OPT(), //
+				ccAPI.getAllRulesForJavaToDoc_CC(), //
 				getNegativeConstraints(builder), //
 				srcModel, //
 				trgModel//
 		);
 
 		return new NeoGenerator(//
-				fwd_optAPI.getAllRulesForCompanyToIT_FWD_OPT(), //
+				ccAPI.getAllRulesForJavaToDoc_CC(), //
 				new NoOpStartup(), //
 				new NoMoreMatchesTerminationCondition(), //
-				new FWD_OPTRuleScheduler(analyser), //
-				forwardTransformation, //
-				new FWD_OPTReprocessor(analyser), //
-				forwardTransformation,//
+				new CCRuleScheduler(analyser), //
+				corrCreation, //
+				new CCReprocessor(analyser), //
+				corrCreation,//
 				new HeartBeatAndReportMonitor(), //
 				new ModelNameValueGenerator(srcModel, trgModel), //
 				List.of(new LoremIpsumStringValueGenerator()));
 	}
 
-	public CorrCreationOperationalStrategy runForwardTransformation(String srcModel, String trgModel) throws Exception {
+	public CorrCreationOperationalStrategy runCorrCreation(String srcModel, String trgModel) throws Exception {
 		this.srcModel = srcModel;
 		this.trgModel = trgModel;
 		run();
-		return forwardTransformation;
+		return corrCreation;
 	}
 
 	protected Collection<IConstraint> getNegativeConstraints(NeoCoreBuilder builder) {
-		var companyAPI = new API_Company(builder);
-		var itAPI = new API_IT(builder);
-		return List.of(//
-				companyAPI.getConstraint_CEOOfMultipleCompanies(), //
-				companyAPI.getConstraint_MultipleAdmins(), //
-				itAPI.getConstraint_NoDifferentITThanRouter()//
-		);
+		return Collections.emptyList();
 	}
 }
